# parrot-mcp-server

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
mcp_servers/: server.yaml
